--- a/croppedMain.ipynb
+++ b/croppedMain.ipynb
@@ -28,14 +28,13 @@
    "source": [
     "# 1. Выбор датасета\n",
     "\n",
-    "Изучая предложенную выборку из **` Kaggle `** Computer Vision было решено остановиться на [**` Captcha Images `**](https://www.kaggle.com/datasets/fournierp/captcha-version-2-images) по нескольким причинам:\n",
+    "Изучая предложенную выборку из **` Kaggle `** Computer Vision, было решено остановиться на [**` Captcha Images `**](https://www.kaggle.com/datasets/fournierp/captcha-version-2-images) по нескольким причинам:\n",
     "1. Это интереснее, чем учить модель на **MNIST** или **CIFAR**, т.к. они часто используются в университетах;\n",
     "2. Это не самый популярный, но при этом хорошо сформированный датасет;\n",
     "3. Присутствует спортивный интерес с показателями модели, т.к. CAPTCHA размывает часть букв и имеет сторонние объекты;\n",
     "4. Датасет аккуратно собран, но при этом есть небольшое пространство для подготовки перед обучением, чтобы улучшить результаты;\n",
-    "5. Мне нравится ирония, что модель научится проходить преграду, призванную бороться с её дальними родственниками.\n",
     "\n",
-    "Сам по себе датасет банально прост - мы имеем уже нормализованные черно-белые картинки с капчей, название которых информирует о том, какой текст содержится на изображении.\n",
+    "Сам по себе датасет состоит из черно-белых картинок с капчей, название которых информирует о том, какой текст содержится на изображении.\n",
     "\n",
     "### *Почему не подошел датасет из задачи?*\n",
     "\n",
@@ -45,14 +44,14 @@
     "- domain;\n",
     "- published_date;\n",
     "- title;\n",
-    "- lang\n",
+    "- lang;\n",
     "\n",
     "Описание на **` Kaggle `** гласит что внутри нас ждут **100 000** ссылок на 8 разных типов новостей с доменом, датой публикации, заголовком и языком, это не то, что мы ожидали. Нам нужны картинки и подписи к ним для обучающей и тестовой выборки.\n",
     "\n",
     "\n",
-    "Возможно это ещё одна задача от авторов - **спарсить картинки с новостных сайтов и сформировать новый датасет...** Но открыв *первые попавшиеся 15-20 ссылок* мы видим обычные новости с фотографиями, а на тех немногих, где на картинке есть текст, отсутствует подпись с его дублированием... т.е. т.к. наша задача - написать модель для распознавания текста с картинки, то для формирования подходящего датасета из приведенного, потребуется огромное количество времени с ручным перепечатыванием текста с картинок.\n",
+    "Возможно это ещё одна задача от авторов - **спарсить картинки с новостных сайтов и сформировать новый датасет...** Но открыв *первые попавшиеся 15-20 ссылок* мы видим обычные новости с фотографиями, а на тех немногих, где на картинке есть текст, отсутствует подпись с его дублированием... т.к. наша задача - написать модель для распознавания текста с картинки, то для формирования подходящего датасета из приведенного, потребуется огромное количество времени с ручным перепечатыванием текста с картинок.\n",
     "\n",
-    "Можно конечно пойти другим, более хитрым путём - написать парсер, который делает скриншот статьи, копирует её текст и формирует csv файл с путём к скришоту и текстом на нём, но это всё ещё очень захламлённый датасет, например:\n",
+    "Можно пойти другим, более хитрым путём - написать парсер, который делает скриншот статьи, копирует её текст и формирует csv файл с путём к скришоту и текстом на нём, но это всё ещё очень захламлённый датасет, например:\n",
     "- Что если на сайте есть картинка с текстом без подписи?\n",
     "- Что если на каких-то из ссылок возможность копировать текст будет заблокирована? Отслеживать post-get запросы? Искать JSON внутри кода статьи?\n",
     "- Что если текст статьи больше скриншота?\n",
@@ -62,34 +61,6 @@
     "### Подключение необходимого\n",
     "\n",
     "Т.к. ограничений для работы с OCR по моделям и пакетам нет, я буду использовать [**`keras`**](https://keras.io/), потому что это относительно простой, но мощный инструмент с подробной документацией и большой экосистемой. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2023-06-04T13:23:39.097355700Z"
-    },
-    "collapsed": false,
-    "is_executing": true
-   },
-   "outputs": [],
-   "source": [
-    "# Подключение всего необходимого\n",
-    "import os\n",
-    "import cv2\n",
-    "import matplotlib.pyplot as plt\n",
-    "from PIL import Image\n",
-    "\n",
-    "import numpy as np\n",
-    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import tensorflow as tf\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import MaxPooling2D, Flatten, Conv2D, Dropout, Dense\n",
-    "from keras.regularizers import l2\n",
-    "from keras.utils import img_to_array"
    ]
   },
   {
@@ -108,7 +79,7 @@
     "\n",
     "Попробуем сделать с этим что-нибудь, используя **` OpenCV `**\n",
     "\n",
-    "Возьмём несколько рандомных картинок и попробуем их преобразовать"
+    "Возьмём две картики и попробуем их улучшить:"
    ]
   },
   {
@@ -154,7 +125,7 @@
     "- из 1070 материалов для обучения мы получим 1070*5=**` 5350 `** и даже если ~25% из них будут с дефектом, модель получит в 4 раза больше чистых данных, чем изначально;\n",
     "- вместо массива уникальных картинок мы получим определенное количество повторяющихся символов в разных вариациях;\n",
     "- мы уменьшим размер изображения и увеличим процент *\"полезных\"* пикселей на 1 картинку;\n",
-    "- мы избавимся от части артефактов, по типу оставшихся полос;\n"
+    "- мы избавимся от части артефактов, находящихся вне разметки;\n"
    ]
   },
   {
@@ -211,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -223,9 +194,13 @@
     }
    ],
    "source": [
+    "# One Hot Encoding\n",
+    "\n",
     "labels_y_le = LabelEncoder().fit_transform(labels_y)\n",
     "labels_y_ohe = OneHotEncoder(sparse_output = False).fit_transform(labels_y_le.reshape(len(labels_y_le),1))\n",
     "info = {labels_y_le[i] : labels_y[i] for i in range(len(labels_y))}\n",
+    "\n",
+    "# разделение данных на Training(0.8) и Test(0.2)  \n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(samples_x, labels_y_ohe, test_size = 0.2, random_state = 4)\n",
     "\n",
@@ -240,7 +215,8 @@
    "metadata": {},
    "source": [
     "# 3. Реализация CNN Модели\n",
-    "\n"
+    "\n",
+    "При построении CNN модели я использую `Sequential()`, потому что это относительно легкий и понятный способ построить модель, после чего добавляю к ней 4 основных `Conv2D` слоя, где после 2 и 4 выключаю 1/5 всех нейронов, а так же 2 раза отключаю 0.4 и 0.2 нейронов в скрытом слое. Такая комбинация слоёв позволяет поддерживать баланс между показателями точности и функции потерь. Подробнее об этом я напишу при подведении итогов обучения."
    ]
   },
   {
@@ -339,7 +315,7 @@
    "source": [
     "## Выводы по обучению модели\n",
     "\n",
-    "Во время работы с построением и обучением модели я столкнулся с неожиданно высокими показателями функции потерь, которые при точности 80-85 процентов выдавали потери от 0.8 до 1-5, что многовато для задачи OCR. Перепробовав около полторы сотни (150!) разных вариантов слоёв и их весов и перепробовав все возможные вариации параметров преобразования данных, я так и не смог сильно улучшить этот показатель. \n",
+    "Во время работы с построением и обучением модели я столкнулся с неожиданно высокими показателями функции потерь, которые при точности 80-85 процентов выдавали потери от 0.8 до 1-5, что многовато для задачи OCR. Перепробовав около полторы сотни (150!) разных вариантов слоёв и их весов и все возможные вариации параметров преобразования данных, я так и не смог сильно улучшить этот показатель. \n",
     "\n",
     "*У меня есть одна догадка на этот счет, которую я не могу сейчас проверить. Возможно дело в моём GPU (у меня в ноутбуке нет дискретной видеокарты, а нейросети используют ядра GPU в работе). Когда я учился в Бельгии, то уже сталкивался с подобной проблемой, и у моих коллег по команде с картами NVIDIA обучение и результаты были лучше, чем на моём.*\n",
     "\n",
